--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelte-photoswipe": "^0.0.2"
+	}
 }
